Fix #638 - Revise styles to make sure the promo is hidden by default

--- a/src/assets/sass/protocol/components/_sticky-promo.scss
+++ b/src/assets/sass/protocol/components/_sticky-promo.scss
@@ -25,7 +25,10 @@ $logos: (
 }
 
 .mzp-c-sticky-promo {
-
+    @include bidi((
+        (right, $spacing-md, auto),
+        (left, auto, $spacing-md),
+    ));
     background-color: $color-white;
     border-radius: $border-radius-sm;
     bottom: 0;
@@ -37,13 +40,10 @@ $logos: (
     width: $content-xs;
     z-index: 10;
     animation: 600ms ease 1500ms both;
+    opacity: 0;
 
     &.mzp-a-slide-in {
         @include bidi(((animation-name, mzp-a-slide-in-right, mzp-a-slide-in-left),));
-        @include bidi((
-            (right, $spacing-md, auto),
-            (left, auto, $spacing-md),
-        ));
     }
 
     &.mzp-a-fade-out {
